<package format="2">
  <!-- Some duplication of properties here and in package.xml. -->
  <!-- Make sure to update them both -->
  <!-- That is the price paid for a pypi and catkin package.  -->
  <name>py_trees</name>
  <version>0.7.6</version>
  <description>
    Pythonic implementation of behaviour trees.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>

  <url type="website">http://py-trees.readthedocs.io</url>
  <url type="repository">https://github.com/stonier/py_trees</url>
  <url type="bugtracker">https://github.com/stonier/py_trees/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3-setuptools</build_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python3-sphinx-argparse</doc_depend>
  <doc_depend>python3-sphinx-rtd-theme</doc_depend>
  <doc_depend>python3-enum34</doc_depend>
  <doc_depend>python3-pydot</doc_depend>

  <exec_depend>python3-pydot</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
