<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees</name>
  <!-- When updating, also update setup.py and version.py -->
  <version>2.1.6</version>
  <description>
    Pythonic implementation of behaviour trees.
  </description>
  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">https://py-trees.readthedocs.io/en/release-1.4.x</url>
  <url type="repository">https://github.com/stonier/py_trees</url>
  <url type="bugtracker">https://github.com/stonier/py_trees/issues</url>

  <build_depend>python3-setuptools</build_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python3-sphinx-argparse</doc_depend>
  <doc_depend>python3-sphinx-rtd-theme</doc_depend>
  <doc_depend>python3-pydot</doc_depend>

  <exec_depend>python3-pydot</exec_depend>

  <test_depend>python3-mypy</test_depend>
  <test_depend>python3-nose</test_depend>
  <test_depend>python3-nose-yanc</test_depend>
  <!--           not available as a deb yet                     -->
  <!-- note: don't confuse nose-htmloutput with nosehtmloutput, -->
  <!--       the latter is a deb and doesn't work on bionic     -->
  <!--        both are pypi packages, but different             -->
  <!--  <test_depend>python3-nosehtmloutput</test_depend>       -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
