<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees</name>
  <!-- When updating, also update setup.py, version.py, pyproject.toml, package.xml -->
  <version>2.2.1</version>
  <description>
    Pythonic implementation of behaviour trees.
  </description>
  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">https://py-trees.readthedocs.io/en/devel/</url>
  <url type="repository">https://github.com/splintered-reality/py_trees</url>
  <url type="bugtracker">https://github.com/splintered-reality/py_trees/issues</url>

  <build_depend>python3-setuptools</build_depend>

  <exec_depend>python3-pydot</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
