[tool.poetry]
name = "py_trees"
version = "2.2.1"
description = "pythonic implementation of behaviour trees"
authors = ["Daniel Stonier", "Naveed Usmani", "Michal Staniaszek"]
maintainers = ["Daniel Stonier <d.stonier@gmail.com>"]
readme = "README.md"
license = "BSD"
homepage = "https://github.com/splintered-reality/py_trees"
repository = "https://github.com/splintered-reality/py_trees"
documentation = "https://py-trees.readthedocs.io/en/devel/"
packages = [
    { include = "py_trees" },
]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries'
]
keywords=["py_trees", "py-trees", "behaviour-trees"]

[tool.poetry.dependencies]
python = "^3.8"
pydot = ">=1.4"

[tool.poetry.group.dev.dependencies]
tox = ">=3.26"
tox-poetry-installer = {extras = ["poetry"], version = ">=0.9.0"}
pytest = [
    { version = ">=7.1", python = "^3.7" }
]
pytest-console-scripts = ">=1.3"
pytest-cov = ">=3.0.0"             # transitively depends on coverage[toml]

[tool.poetry.group.format.dependencies]
ufmt = ">=2.0"                     # black (style) + usort (import order)

[tool.poetry.group.static.dependencies]
mypy = ">=0.991"

[tool.poetry.group.lint.dependencies]
# strongly recommended
flake8 = ">=5.0"                  # combines pyflakes (errors) & pycodestyle (pep8 style)
flake8-docstrings = ">=1.6"       # docstrings (integrates pydocstyle)
darglint = ">=1.8"                # checks docstrings match implementation
# optional, these go above and beyond
flake8-bugbear = ">=22.9"         # bugs & design not strictly pep8

[tool.poetry.group.docs.dependencies]
sphinx = "<6"
sphinx-rtd-theme = ">=1.1"        # not yet ready for sphinx 6
sphinx-argparse = ">=0.4"

[tool.poetry.scripts]
py-trees-render = "py_trees.programs.render:main"
py-trees-demo-action-behaviour = "py_trees.demos.action:main"
py-trees-demo-behaviour-lifecycle = "py_trees.demos.lifecycle:main"
py-trees-demo-blackboard = "py_trees.demos.blackboard:main"
py-trees-demo-blackboard-namespaces = "py_trees.demos.blackboard_namespaces:main"
py-trees-demo-blackboard-remappings = "py_trees.demos.blackboard_remappings:main"
py-trees-demo-context-switching = "py_trees.demos.context_switching:main"
py-trees-demo-display-modes = "py_trees.demos.display_modes:main"
py-trees-demo-dot-graphs = "py_trees.demos.dot_graphs:main"
py-trees-demo-either-or = "py_trees.demos.either_or:main"
py-trees-demo-eternal-guard = "py_trees.demos.eternal_guard:main"
py-trees-demo-logging = "py_trees.demos.logging:main"
py-trees-demo-pick-up-where-you-left-off = "py_trees.demos.pick_up_where_you_left_off:main"
py-trees-demo-selector = "py_trees.demos.selector:main"
py-trees-demo-sequence = "py_trees.demos.sequence:main"
py-trees-demo-tree-stewardship = "py_trees.demos.stewardship:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
