<package>
  <name>gopher_behaviours</name>
  <version>0.1.2</version>
  <description>
    Behaviours for gophers.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gopher_behaviours</url>
  <url type="repository">https://github.com/robotics-in-concert/gopher_crazy_hospital</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/gopher_crazy_hospital/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>door_interactions_msgs</run_depend>
  <run_depend>dslam_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>goal_finisher</run_depend>
  <run_depend>gopher_configuration</run_depend>
  <run_depend>gopher_semantics</run_depend>
  <run_depend>gopher_std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>py_trees</run_depend>
  <run_depend>python-enum34</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>somanet_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>unique_identifier</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
