<?xml version="1.0"?>
<package>
  <name>gopher_configuration</name>
  <version>0.1.1</version>
  <description>
    Centralised configuration for a gopher.
  </description>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_tools</url>
  <url type="repository">https://bitbucket.org/yujinrobot/gopher_crazy_hospital</url>
  <url type="bugtracker">https://bitbucket.org/yujinrobot/gopher_crazy_hospital/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>gopher_std_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rospy</run_depend>
</package>
