<?xml version="1.0"?>
<package>
  <name>gopher_semantics</name>
  <version>0.1.1</version>
  <description>
    Map locations for Gopher System
  </description>
  <maintainer email="alexandre.vincent@gmail.com">Alexandre Vincent</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_tools</url>
  <url type="repository">https://bitbucket.org/yujinrobot/gopher_rocon</url>
  <url type="bugtracker">https://bitbucket.org/yujinrobot/gopher_rocon/issues</url>
  <author>Daniel Stonier</author>
  <author>Alexandre Vincent</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>gopher_semantic_msgs</run_depend>
  <run_depend>gopher_std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
