<?xml version="1.0"?>
<package>
  <name>marco_polo</name>
  <version>0.1.1</version>
  <description>
    Multimap map switching and teleporting for gophers.
  </description>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/marco_polo</url>
  <url type="repository">https://bitbucket.org/yujinrobot/gopher_crazy_hospital</url>
  <url type="bugtracker">https://bitbucket.org/yujinrobot/gopher_crazy_hospital/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gopher_configuration</run_depend>
  <run_depend>gopher_navi_msgs</run_depend>
  <run_depend>gopher_semantics</run_depend>
  <run_depend>python-bs4</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
