<package format="2">
  <name>py_trees</name>
  <version>0.4.0</version>
  <description>
    Behaviour trees in python.
  </description>

  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/py_trees</url>
  <url type="repository">https://github.com/stonier/py_trees_suite</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_suite/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>>python-catkin-pkg</doc_depend>
  <doc_depend>python-sphinx-argparse</doc_depend>
  <doc_depend>python-sphinx-rtd-theme</doc_depend>

  <exec_depend>python-enum34</exec_depend>
  <exec_depend>python-pydot</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
