<?xml version="1.0"?>
<package>
  <name>py_trees_suite</name>
  <version>0.2.0</version>
  <description>
    Behaviour trees, in python, especially tailored for robots.
  </description>
  <url type="repository">https://github.com/stonier/py_trees_suite</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_suite/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
