<?xml version="1.0"?>
<package>
  <name>py_trees_suite</name>
  <version>0.4.1</version>
  <description>
    Behaviour trees, in python, especially tailored for robots.
  </description>

  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <url type="repository">https://github.com/stonier/py_trees_suite</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_suite/issues</url>

  <license>BSD</license>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
