<package>
  <name>rqt_behaviour_tree</name>
  <version>0.0.1</version>
  <description>rqt_behaviour_tree provides a GUI plugin for visualizing py_trees behaviour trees. Based on rqt_tf_tree.</description>
  <author>Thibault Kruse</author>
  <author>Michal Staniaszek</author>
  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ros-visualization/rqt_robot_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_plugins/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>py_trees</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>py_trees</run_depend>


  <test_depend>python-mock</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
